--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -7,9 +7,31 @@ img {
   height: 100px;
 }
 
+.content-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.tiles {
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+}
+
+.tile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex: 0 1 200px;
+  text-align: center;
 }
 
 /* do not edit this footer */
