--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -18,8 +18,25 @@ body {
 .modal {
   background: white;
   width: 480px;
+  padding: 20px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.modal p {
+  margin: 0 0 10px 0;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  font-weight: bold;
+  font-size: x-large;
+  gap: 10px;
 }
 
 .icon {
@@ -49,6 +66,12 @@ body {
   border: 1px solid #eee;
   padding: 0;
 }
+
+
+.text {
+  margin-bottom: 20px;
+}
+
 
 button {
   cursor: pointer;
